modify swagger doc paramerter
