# docs/swagger.json
@@ -54,6 +54,17 @@
                     "user"
                 ],
                 "summary": "FilterTrainer base on filter input",
+                "parameters": [
+                    {
+                        "description": "put FilterTrainerInput input json and pass to  gin.Context",
+                        "name": "json_in_ginContext",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FilterTrainerInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -181,6 +192,20 @@
         }
     },
     "definitions": {
+        "controllers.FilterTrainerInput": {
+            "type": "object",
+            "required": [
+                "Speciality"
+            ],
+            "properties": {
+                "Speciality": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "controllers.LoginInput": {
             "type": "object",
             "required": [
